syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "ResourceStatusChangeStub";
package vire.cms;

import "vire/utility/BaseEvent.proto";
import "vire/cms/ResourceStatusRecord.proto";

message ResourceStatusChange {

  vire.utility.BaseEvent        _base  = 1;
  vire.cms.ResourceStatusRecord status = 100; // Resource status record

}