syntax = "proto3";
option java_package = "VireProtobuf.vire.utility";
option java_outer_classname = "BasePayloadStub";
package vire.utility;

// The top-level mother class for all payload classes:
message BasePayload {

  // reserved 1-99

}